<resources>
    <string name="app_name">MyPokedexMobile</string>
    <string name="title_home_menu">Home</string>
    <string name="title_catch_menu">Catch</string>
    <string name="title_info_menu">Info</string>
    <string name="my_pokemon_no_data">you don\'t have any pokemon in your collection</string>
    <string name="go_catch_em_all">go catch \'em all</string>
    <string name="search_pokemon">Search pokemon...</string>
    <string name="catch_now">Catch Now</string>
    <string name="my_pokemon_collection">My Pokemon Collection</string>
    <string name="confirm">CONFIRM</string>
    <string name="type_here">Type here...</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="welcome_title">Welcome to My Pokedex Mobile</string>
    <string name="this_app">This app is simulating your phone as pokedex to get the data of wild pokemon. Go to Catch menu and see various pokemon, tap on it to see the description</string>
    <string name="how_to_catch">You can also catch the pokemon by tapping the Catch Now button until you catch the pokemon. The catched pokemon will appear in Home menu as your pokemon collection</string>
    <string name="how_to_release">You can release your pokemon collection by tap long on selected pokemon and confirm to release the selected pokemon</string>
</resources>