<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cumiterbang.mypokedexmobile.ui.home_menu.HomeFragment"
        android:label="@string/title_home_menu"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_catch"
        android:name="com.cumiterbang.mypokedexmobile.ui.catch_menu.CatchFragment"
        android:label="@string/title_catch_menu"
        tools:layout="@layout/fragment_catch"
        />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.cumiterbang.mypokedexmobile.ui.info_menu.InfoFragment"
        android:label="@string/title_info_menu"
        tools:layout="@layout/fragment_info" />
</navigation>